--- a/app.json
+++ b/app.json
@@ -1,12 +1,12 @@
 {
-  "name": "RX-01",
-  "description": "RX-01",
+  "name": "RTX-01",
+  "description": "RTX-01",
   "keywords": [
-    "VMess VLESS"
+    ""
   ],
   "env": {
     "PROTOCOL": {
-      "description": "协议VMess或VLESS，请填小写的vmess或vless",
+      "description": "请填小写的vless",
       "value": "vless",
       "required": true
     },
@@ -21,8 +21,8 @@
       "required": true
     }
   },
-  "website": "https://github.com/用户名/项目名称",
-  "repository": "https://github.com/用户名/项目名称",
+  "website": "https://github.com/YundtTheresa/XR-001",
+  "repository": "https://github.com/YundtTheresa/XR-001",
   "stack": "container",
   "features": [
     "runtime-dyno-metadata"
