--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
       "required": true
     },
     "UUID": {
-      "description": "用户的主ID",
+      "description": "UUID",
       "value": "",
       "required": false
     },
